# SimpleDownloadManager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.superpowers/brainstorm/: popup-static-mockups.html
.tmp-build/node-compile-cache/v24.12.0-x64-cf738c9d/: 000a1de6  00a3cacd  012e069a  01f25b65  0274927e  03099819  045b1dc4  052768c8  05330103  0539658f  056407a9  05b95c81  0742f03e  0778b960  08211eb2  08f84914  08fcad41  090dbd98  0aaed951  0b4d326d  0c33d3b3  0c641507  0d17afb7  0dc02503  0df68674  0e41bec3  0f44aab6  10cb14e2  10d12405  11ca6000  11e0bcf8  128ffeb6  133aee2d  13fbcebc  1425bd90  14345a1b  149c4644  1520be33  163becca  164e3e5e  (+529 more)
apps/desktop/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop-core/: Cargo.toml
apps/desktop-core/src/: backend.rs  contracts.rs  host_protocol.rs  lib.rs  state.rs  transfer.rs
apps/desktop-core/src/state/: enqueue.rs  jobs.rs  lifecycle.rs  tests.rs  torrent.rs
apps/desktop-core/src/storage/: mod.rs
apps/desktop-core/tests/: backend_contracts.rs  contracts.rs  host_protocol_contracts.rs  http_transfer_contracts.rs  state_contracts.rs  torrent_contracts.rs
apps/desktop-slint/: Cargo.toml  Packager.toml  build.rs
apps/desktop-slint/nsis/: installer.nsi
apps/desktop-slint/src/: lib.rs  main.rs  runtime.rs  smoke.rs
apps/desktop-slint/src/controller/: mod.rs
apps/desktop-slint/src/ipc/: mod.rs
apps/desktop-slint/src/shell/: clipboard.rs  lifecycle.rs  main_window.rs  mod.rs  native_host.rs  notifications.rs  popups.rs  tray.rs  windows.rs
apps/desktop-slint/src/update/: mod.rs
apps/desktop-slint/tests/: controller.rs  ipc.rs  lifecycle.rs  runtime.rs  runtime_boundary.rs  shell.rs  smoke.rs  update.rs
apps/desktop-slint/ui/: main.slint
apps/desktop/public/: appearance-preload.js
apps/desktop/src/: AddDownloadModal.svelte  AddDownloadModal.tsx  App.svelte  App.tsx  AppIcon.tsx  BatchProgressWindow.svelte  BatchProgressWindow.tsx  DownloadDetailsModal.tsx  DownloadProgressWindow.svelte  DownloadProgressWindow.tsx  DownloadPromptWindow.svelte  DownloadPromptWindow.tsx  FileBadge.svelte  PopupTitlebar.svelte  PopupTitlebar.tsx  QueueView.svelte  QueueView.tsx  SettingsPage.svelte  SettingsPage.tsx  Titlebar.svelte  Titlebar.tsx  ToastArea.svelte  ToastArea.tsx  ToggleControl.svelte  TorrentProgressWindow.svelte  TorrentProgressWindow.tsx  app.css  appBootstrap.ts  appUpdates.ts  appearance.ts  backend.ts  backendCommandArgs.ts  backendMock.ts  backendPreview.ts  batchProgress.ts  bulkArchiveNaming.ts  bulkQueueRows.ts  defaultSettings.ts  deletePrompts.ts  diagnosticsRefresh.ts  (+39 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  torrent-bench.qbittorrent.example.json
apps/desktop/src-tauri/capabilities/: default.json  popups.json
apps/desktop/src-tauri/examples/: http_segment_bench.rs  http_stream_bench.rs  torrent_bench.rs
apps/desktop/src-tauri/linux/deb/: postinst  postrm
apps/desktop/src-tauri/linux/rpm/: postinstall  postremove
apps/desktop/src-tauri/src/: archive_parts.rs  bulk_bench.rs  hosters.rs  http_bench.rs  iced_app.rs  iced_main.rs  lib.rs  lifecycle.rs  main.rs  native_host.rs  prompts.rs  runtime.rs  sidecars.rs  state.rs  torrent.rs  torrent_bench.rs  updates.rs  windows.rs
apps/desktop/src-tauri/src/agent/: mod.rs
apps/desktop/src-tauri/src/commands/: dialogs.rs  events.rs  mod.rs  native_host.rs  shell.rs
apps/desktop/src-tauri/src/download/: archive.rs  bulk_finalize.rs  client.rs  filesystem.rs  http.rs  mod.rs  notifications.rs  policy.rs  segmented.rs  stream.rs  tests.rs  torrent.rs  torrent_watchdog.rs  types.rs
apps/desktop/src-tauri/src/download/tests/: bulk_finalize.rs  http.rs  mod.rs  recovery.rs  scenarios.rs  segmented.rs  torrent_metadata.rs
apps/desktop/src-tauri/src/hosters/: batch.rs
apps/desktop/src-tauri/src/ipc/: mod.rs
apps/desktop/src-tauri/src/state/: blob_stream.rs  browser_adoption.rs  diagnostics.rs  enqueue.rs  jobs.rs  lifecycle.rs  local_recovery.rs  paths.rs  progress.rs  runtime.rs  scheduler.rs  settings.rs  tests.rs  torrent.rs  types.rs
apps/desktop/src-tauri/src/state/tests/: blob_stream.rs  browser_adoption.rs  destructive_cleanup.rs  diagnostics.rs  enqueue_settings.rs  local_recovery.rs  mod.rs  progress.rs  scheduler.rs  torrent.rs
apps/desktop/src-tauri/src/storage/: mod.rs
apps/desktop/src-tauri/tests/: command_adapter_contracts.rs
apps/desktop/src-tauri/windows/: hooks.nsh  installer.nsi
apps/desktop/tests/: appBootstrap.test.ts  (+92 more)
apps/extension/: FIREFOX_GUIDELINES.md  package.json  tsconfig.json
apps/native-host/: Cargo.toml
config/: release.json
docs/: browser-extension-download-capture.md  browser-extension-manual-qa.md  install.md  privacy-policy.md  protocol.md  slint-migration-checklist.md  testing-scenario-matrix.md  threat-model.md
scripts/: build-release-linux.sh  build-release-slint.ps1  build-release.ps1  e2e-native-host.ps1  lint-firefox.mjs  linux-release-targets.mjs  package-firefox-amo.mjs  package-firefox-test.mjs  prepare-release-slint.mjs  prepare-release.mjs  publish-updater-alpha-bridge.mjs  publish-updater-alpha-slint.mjs  publish-updater-alpha.mjs  publish-updater-beta.mjs  register-native-host-linux.sh  register-native-host.ps1  run-clippy.mjs  run-extension-tests.mjs  run-live-bulk-test.mjs  run-live-http-test.mjs  run-live-torrent-test.mjs  run-rust-tests.mjs  run-scenario-tests.mjs  run-soak-tests.mjs  run-ts-tests.mjs  slint-phase5-smoke-report.mjs  slint-phase6-smoke-report.mjs  smoke-phase5-slint.ps1  smoke-phase6-slint.ps1  smoke-release-slint.mjs  smoke-release-slint.ps1  unregister-native-host-linux.sh  unregister-native-host.ps1  updater-release.mjs  verify-release-slint.mjs  windows-release-targets.mjs
scripts/lib/: run.mjs
(+53 files in other folders)
