[package]
name = "simple-download-manager-desktop-core"
version = "0.3.52-alpha"
edition = "2021"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt"] }
