[package]
name = "simple-download-manager-desktop-core"
version = "0.3.52-alpha"
edition = "2021"

[dependencies]
dirs = "6.0.0"
percent-encoding = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["sync", "time"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt", "time"] }
