[package]
name = "simple-download-manager-desktop-core"
version = "0.3.52-alpha"
edition = "2021"

[dependencies]
dirs = "6.0.0"
futures-util = "0.3.31"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.43.0", features = ["fs", "io-util", "rt", "sync", "time"] }
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["fs", "macros", "rt", "time"] }
