[package]
name = "simple-download-manager-desktop-slint"
version = "0.3.52-alpha"
edition = "2021"
build = "build.rs"
default-run = "simple-download-manager"

[[bin]]
name = "simple-download-manager"
path = "src/main.rs"

[dependencies]
simple-download-manager-desktop-core = { path = "../desktop-core" }
slint = "1.16.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }

[build-dependencies]
slint-build = "1.16.0"
