[package]
name = "simple-download-manager-desktop-slint"
version = "0.3.52-alpha"
edition = "2021"
build = "build.rs"
default-run = "simple-download-manager"

[[bin]]
name = "simple-download-manager"
path = "src/main.rs"

[dependencies]
simple-download-manager-desktop-core = { path = "../desktop-core" }
cargo-packager-updater = "0.2.3"
rfd = "0.15.4"
serde_json = "1.0"
i-slint-backend-winit = "1.16.0"
slint = "1.16.0"
tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
winreg = "0.52.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
notify-rust = "4.14.0"
tray-icon = "0.21.3"

[build-dependencies]
slint-build = "1.16.0"
