[package]
name = "simple-download-manager-desktop-backend"
version = "0.2.0-a"
edition = "2021"
build = "build.rs"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.1", features = [] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"
dirs = "6.0.0"
percent-encoding = "2.3.1"
tauri-plugin-notification = "2"
winreg = "0.52.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }
