[package]
name = "simple-download-manager-desktop-backend"
version = "0.3.50-alpha"
edition = "2021"
build = "build.rs"

[dependencies]
futures-util = "0.3.31"
aws-lc-rs = { version = "1.16.3", features = ["prebuilt-nasm"] }
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
reqwest = { version = "0.12.15", features = ["stream", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.4.1", features = ["tray-icon"] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"
dirs = "6.0.0"
percent-encoding = "2.3.1"
tauri-plugin-notification = "2"
winreg = "0.52.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[profile.dev.package.aws-lc-sys]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
