[package]
name = "simple-download-manager-desktop-backend"
version = "0.3.52-alpha"
edition = "2021"
build = "build.rs"

[dependencies]
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-download-manager-desktop-core = { path = "../../desktop-core" }
tauri = { version = "2.4.1", features = ["tray-icon"] }
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.4"
dirs = "6.0.0"
tauri-plugin-notification = "2"
winreg = "0.52.0"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[profile.dev.package.aws-lc-sys]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
